<resources>
    <string name="app_name">Telegram</string>
    <string name="new_secret_chat">New Secret Chat</string>
    <string name="new_group">New Group</string>
    <string name="new_channel">New Channel</string>
    <string name="contacts">Contacts</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="calls">Calls</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="settings">Settings</string>
    <string name="telegram_faq">Telegram FAQ</string>
    <string name="message_row_name">Ася Николаева</string>
    <string name="message_row_message">some text some messages</string>
    <string name="message_row_time">18:00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_name">Sergey Balakin</string>
    <string name="account_number">+7 (913) 253-96-33</string>
</resources>
