<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/message_row_img"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@mipmap/ic_message_image"
        />

    <TextView
        android:id="@+id/message_row_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/message_row_img"
        app:layout_constraintTop_toTopOf="@id/message_row_img"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/message_row_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/message_row_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/message_row_img"
        app:layout_constraintBottom_toBottomOf="@id/message_row_img"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/message_row_message"
        android:textSize="18sp"
        android:textColor="@color/gray"
        />

    <TextView
        android:id="@+id/message_row_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/message_row_img"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/message_row_time"
        android:textSize="18sp"
        android:textColor="@color/gray"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/message_row_img"
        android:layout_marginTop="15dp"
        android:layout_marginStart="95dp"
        />







</android.support.constraint.ConstraintLayout>